# stock-scanner

./: .env.example  .gitignore  CHANGES.md  Dockerfile  ERROR_HANDLING.md  Makefile  README.md  api_v2.py  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  web_server.py
docs/: PIT_CONSISTENCY.md  stock-scanner-analysis.md
examples/: pit_consistency_example.py
frontend/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/components/: ScoreContributionDrawer.vue  StockAnalysisApp.vue  StockCard.vue  StockSearch.vue  StreamStatusBar.vue
frontend/src/services/: api.ts  streamRequest.ts
frontend/src/types/: index.ts
frontend/src/utils/__tests__/: stockValidator.test.ts
frontend/tests/: FallbackReasonTag.spec.ts  RiskTagAndConfidence.spec.ts  ScoreContributionDrawer.spec.ts  StreamStatusBar.spec.ts  streamRequest.spec.ts
services/: ai_analyzer.py  calibration.py  factor_scoring.py  risk_metrics.py  stock_analyzer_service.py  stock_data_provider.py
services/quant/: backtest.py  factors.py  reco.py
tests/: test_ai_analyzer_stream_unit.py  test_ai_config_resolution.py  test_akshare.py  test_app_health.py  test_calibration.py  test_error_handling.py  test_factor_scoring.py  test_pit_consistency.py  test_stream.py
utils/: api_utils.py  cache.py  error_handlers.py  exceptions.py  feature_flags.py  logger.py  metrics.py  persistence.py  pit_validation.py  rate_limiter.py  task_queue.py
