[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-scanner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=web_server --cov=services --cov=utils --cov-report=term-missing"
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = [
  "services",
  "utils",
  "web_server",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = true
